fixed that you can withdraw any amount