@@ -2,6 +2,7 @@ package ximronno.bukkit.menu.transactions;
 
 import de.rapha149.signgui.SignGUI;
 import de.rapha149.signgui.SignGUIAction;
+import org.bukkit.DyeColor;
 import org.bukkit.Material;
 import org.bukkit.NamespacedKey;
 import org.bukkit.entity.Player;
@@ -11,6 +12,7 @@ import org.bukkit.persistence.PersistentDataContainer;
 import org.bukkit.persistence.PersistentDataType;
 import ximronno.bukkit.listeners.TransactionsListener;
 import ximronno.bukkit.menu.DioreDataMenu;
+import ximronno.bukkit.message.type.CommandMessagesPaths;
 import ximronno.bukkit.message.type.menu.MenuItemLorePaths;
 import ximronno.bukkit.message.type.menu.MenuItemNamesPaths;
 import ximronno.bukkit.message.type.menu.MenuNamesPaths;
@@ -121,12 +123,12 @@ public class WithdrawMenu extends DioreDataMenu {
     public void handleMenu(Player p, Account acc, Locale locale, InventoryClickEvent e, int slot, PersistentDataContainer container) {
         if(slot == DEPOSIT_SIGN_SLOT) {
             if(amount <= 0) {
-                callSign(p);
+                callSign(p, locale);
                 return;
             }
             else {
                 if(e.getClick().equals(ClickType.RIGHT)) {
-                    callSign(p);
+                    callSign(p, locale);
                     return;
                 }
             }
@@ -141,9 +143,13 @@ public class WithdrawMenu extends DioreDataMenu {
             update(p);
         }
     }
-    private void callSign(Player p) {
+    private void callSign(Player p, Locale locale) {
         SignGUI signGUI = SignGUI.builder()
                 .setType(Material.DARK_OAK_SIGN)
+                .setColor(DyeColor.LIGHT_BLUE)
+                .setLine(1, "↑")
+                .setLine(2, "|")
+                .setLine(3, "Write amount to withdraw!")
                 .setHandler(((player, signGUIResult) -> {
                     String line = signGUIResult.getLine(0);
 
@@ -151,7 +157,8 @@ public class WithdrawMenu extends DioreDataMenu {
                     try {
                         doubleFromLine = Double.parseDouble(line);
                     } catch(Exception exc) {
-                        return Collections.emptyList();
+                        return List.of(SignGUIAction.runSync(DiorePlugin.getInstance().getJavaPlugin(), () -> new WithdrawMenu().open(p)),
+                                SignGUIAction.run(() -> player.sendMessage(messageManager.getMessage(CommandMessagesPaths.BALANCE_INVALID_AMOUNT, locale, true))));
                     }
 
                     return List.of(SignGUIAction.runSync(DiorePlugin.getInstance().getJavaPlugin(), () -> new WithdrawMenu(doubleFromLine).open(p)));
